--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/contracts": "^5.2.0",
     "hardhat": "^2.22.19"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "viem": "^2.24.2"
   }
 }
